# client-signals

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  README.md  go.mod  signals.go  transport.go  transport_test.go
.github/workflows/: checks.yml  publish-python.yml
cmd/: main.go
docs/: markers.md  signals.md
elixir/: AGENTS.md  README.md  mix.exs
elixir/lib/: client_signals.ex
elixir/lib/client_signals/: plug.ex  prom_ex_plugin.ex  request.ex  request_metrics.ex
elixir/test/: client_signals_test.exs  test_helper.exs
elixir/test/client_signals/: plug_test.exs  request_metrics_test.exs  request_test.exs
go/: .golangci.yml  AGENTS.md  README.md  go.mod  go.sum  interactive.go  markers.go  parent.go  prometheus.go  prometheus_test.go  request.go  request_test.go  signals.go  signals_test.go  spec_contract_test.go  transport.go  transport_test.go
go/cmd/: main.go
javascript/: AGENTS.md  README.md  package.json
javascript/src/: index.js
javascript/test/: index.test.js
python/: AGENTS.md  README.md  pyproject.toml  test_client_signals.py
python/client_signals/: __init__.py  core.py
scripts/: bump_version.sh
spec/: README.md  api-route-fixtures.json  header-fixtures.json  markers.json  operator-fixtures.json  parent-fixtures.json  request-classification-fixtures.json  request-metrics.md  route-fixtures.json  sanitize-fixtures.json
