[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "client-signals"
version = "0.0.0"
description = "Privacy-safe client signals for CLI HTTP traffic."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["client_signals*"]
